--- a/index-1.html
+++ b/index-1.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="format-detection" content="telephone=no"/>
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <title>About</title>
+    <title>Quienes-Somos</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -37,80 +36,30 @@
 </head>
 <body>
 <div class="page">
-    <!--========================================================
-                              HEADER
-    =========================================================-->
+    <!--======================= HEADER ========================-->
     <header>
-
-        <section class="well panels">
-            <div class="container">
-                <ul class="inline-list">
-                    <li><a href="#">Forums</a></li>
-                    <li><a href="#">Community </a></li>
-                    <li><a href="#">Affiliates </a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-
-                <div class="btn-wr-header">
-                    <a href="#" class="btn btn-default btn-default__mod">Create an account</a>
-                    <a href="#" class="btn btn-default btn-default__mod">Sign In</a>
-                </div>
-            </div>
-        </section>
-
         <div id="stuck_container" class="stuck_container">
             <nav class="navbar navbar-default navbar-static-top clearfix">
                 <div class="container">
                     <div class="navbar-header">
                         <h1 class="navbar-brand">
-                            <a href="./">scripts</a>
-                            <span class="brand-slogan">Online Scripts Directory </span>
+                            <!-- <img src="assets/images/logo_img.png">  -->
                         </h1>
-
                     </div>
 
                     <div class="navbar-right">
                         <ul class="navbar-nav sf-menu" data-type="navbar">
                             <li>
-                                <a href="./">Home</a>
+                                <a href="./"><i class="fa fa-home"></i> Inicio</a>
                             </li>
                             <li class="active">
-                                <a href="index-1.html">About</a>
+                                <a href="index-1.html"><i class="fa fa-database"></i> Corporativo</a>
                             </li>
                             <li>
-                                <a href="index-2.html">Most Viewed </a>
+                                <a href="index-2.html"><i class="fa fa-rocket"></i> Galería</a>
                             </li>
-                            <li class="dropdown">
-                                <a href="index-3.html">Highest rated</a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Lorem ipsum dolor </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Ait amet conse </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Ctetur adipisicing elit</a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a href="#">Latest</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Archive</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">Sed do eiusmod </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tempor incididunt </a>
-                                    </li>
-                                </ul>
-                            </li>
-
                             <li>
-                                <a href="index-4.html">Contact Us</a>
+                                <a href="index-4.html"><i class="fa fa-map-marker"></i> Contactos</a>
                             </li>
                         </ul>
                     </div>
@@ -145,77 +94,81 @@
 
         <section class="well7 bg-alt">
             <div class="container center991">
+                <h3 class="text-center">
+                    <strong>Nuestra</strong> Empresa
+                    <hr>
+                </h3>
+
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <h3 class="text-center">
-                            <strong>About</strong> Us
-                        </h3>
+
+                    
+                    <div class="col-md-8 col-sm-8 col-xs-12">
                         <img class="" src="assets/images/page-2_img01.jpg" alt="">
                         <h4 class="txt-sec">
                             <a href="#">
-                                Pestibulum molestieenean nonummy
+                                Quienes Somos
                             </a>
                         </h4>
-
                         <p>
-                            Phasellus metus elit, venenatis non orci sit amet, sollicitudin efficitur lectus. Quisque
-                            finibus urna in venenatis semper. Do nec vitae mauris eget nibh efficitur porttitor. <br/>
+                            Prevenco Cía. Ltda., es una empresa constituida en el Ecuador que brinda
+                            soluciones, asesoría y gestión empresarial en Seguridad y Salud en el Trabajo,
+                            nuestra empresa cuenta con profesionales altamente calificados y los recursos
+                            necesarios para solventar de manera rápida, eficaz y oportuna; las necesidades y
+                            soluciones integrales que su organización necesita en materia de Seguridad y Salud
+                            en el Trabajo.<br/>
                             <br/>
-                            Praesent urna ipsum, tincidunt et lacus lacinia, venenatis ullamcorper purus. Mauris vel
-                            lobortis leo, sed ullamcorper neque. Integer dapibus iaculis nunc
+                            Como principio fundamental, nuestra gestión se sostiene de normas y estándares
+                            nacionales e internacionales, exigiendo nuestra labor y garantizando la calidad de
+                            nuestros servicios. Prevenco cuenta con diferentes áreas de negocio, que permiten
+                            ampliar y gestionar toda necesidad en lo referente a Seguridad y Salud Ocupacional,
+                            convirtiéndonos en pieza clave y estratégica para su empresa, afrontando de
+                            manera responsable y profesional, las exigencias de la legislación ecuatoriana y los organismos de control nacional; desarrollando, implementando y gestionando todos los requisitos técnico legales del Sistema de Gestión en Seguridad y Salud en el Trabajo de su organización.
 
                         </p>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <h3 class="text-center"><strong>Our</strong> History</h3>
+                    <div class="col-md-4 col-sm-4 col-xs-12">                        
                         <ul class="list list-1">
                             <li>
-                                <span class="time">2010 -</span>
-                                    <span class="wrap">Do nec vitae mauris eget nibh efficitur porttitor.
-Praesent urna ipsum, tincidunt et lacus lacinia, ve nenatis ullamcorper purus. Mauris vel lobortis leo, sed ullamcorper neque. Integer </span>
+                                <span class="time">Misión</span>
+                                    <span class="wrap">
+                                        Brindar soluciones, asesoría y gestión empresarial en Seguridad y Salud en el Trabajo, creando una cultura de prevención y seguridad en los empleadores y trabajadores del Ecuador, con el objetivo de prevenir accidentes de trabajo y enfermedades profesionales.
+                                    </span>
                             </li>
                             <li>
-                                <span class="time">2012 -</span>
-                                <span class="wrap">Atincidunt et lacus lacinia, ve nenatis ullamcorper purus. Mauris vel lobortis leo, sed ullamcorper neque. Integer dapibus iaculis nunc vehicula phar etra. In dictum magna nisl, ac volutpat sapien iaculis sed. Aliquam non tempor </span>
+                                <span class="time">Visión</span>
+                                <span class="wrap">
+                                    Posicionarnos en el Ecuador como una Empresa líder en el área de Seguridad y Salud en el Trabajo, manteniendo la excelencia y confianza de nuestros clientes, fundamentado nuestra gestión con la aplicación de normas y estándares nacionales e internacionales en materia de Seguridad y Salud Ocupacional.
+                                </span>
                             </li>
+                            <li>
+                                <span class="time">Contactos</span>
+                                <span class="wrap">
+                                    <div class="contact-list">
+                                    
+                                    <dl class="phone">
+                                        <dt>Web Site:</dt>
+                                        <dd>
+                                            <a href="www.prevenco.com.ec"> www.prevenco.com.ec</a>
+                                        </dd>
+                                        <dt>Correo Gerencia:</dt>
+                                        <dd>
+                                            <a href="callto:gerencia@prevenco.com.ec"> gerencia@prevenco.com.ec</a>
+                                        </dd>
+                                        <dt>E-mail Información:</dt>
+                                        <dd>
+                                            <a href="callto:info@prevenco.com.ec"> info@prevenco.com.ec</a>
+                                        </dd>
 
-                            <li>
-                                <span class="time">2014 -</span>
-                                <span class="wrap">Integer dapibus iaculis nunc vehicula pharetra. In dictum magna nisl, ac volutpat sapien iaculis sed. Aliquam non tempor orci. Aenean orci nibh, finibus maximus mattis eget, sollicitu</span>
-                            </li>
-                            <li>
-                                <span class="time">2015 -</span>
-                                <span class="wrap">Mauris vel lobortis leo, sed ullamcorper neque. Integer dapibus iaculis nunc vehicula pharetra. In dictum magna nisl, ac volutpat sapien iaculis sed. Aliquam non tempor orci. Aenean orci nibh, finibus maximus mattis eget, sollicitudin </span>
-                            </li>
+                                        <dt>E-mail Ventas:</dt>
+                                        <dd>
+                                            <a href="mailto:ventas@prevenco.com.ec">ventas@prevenco.com.ec</a>
+                                        </dd>
+                                    </dl>
+                                </div>
 
+                                </span>                                
+                            </li>
                         </ul>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <h3 class="text-center">
-                            <strong>Our </strong>Advantages
-                        </h3>
-
-                        <h4 class="txt-sec">
-                            Excepteur sint occaecat cupidatat non
-                        </h4>
-
-                        <p>
-                            Quisque finibus urna in venenatis semper. Do nec vitae mauris eget nibh efficitur porttitor.
-                            Praesent urna ipsum, tincidunt et lacus lacinia, venenatis ullamcorper purus. Maur is vel
-                            lobortis leo, sed ullamcorper neque. Integer dapibus iaculis nunc vehicula pharetra. In
-                            dictum
-                        </p>
-                        <ul class="list-2 txt-sec">
-                            <li><a href="#">Pestibulum molestieenean nonummys tudin</a></li>
-                            <li><a href="#">Hendreritivamus eget nibh vel metus</a></li>
-                            <li><a href="#">Etiam cursus leo psumfaucibus orci suere</a></li>
-                            <li><a href="#">Nulla facilisii primis neclaoreet</a></li>
-                            <li><a href="#">Aenean nec eros luctus estibulum ante</a></li>
-                            <li><a href="#">Ultrices pouspendisse sollic velita</a></li>
-                        </ul>
-                        <p>Quisque finibus urna in venenatis semper. Do nec vitae mauris eget nibh efficitur porttitor.
-                            Praesent urna ipsum, tincidunt et lacus lacinia, venenatis ullamcorper purus. Maur is vel
-                            lobortis leo, sed ullamcorper </p>
                     </div>
                 </div>
             </div>
@@ -414,17 +367,12 @@ Praesent urna ipsum, tincidunt et lacus lacinia, ve nenatis ullamcorper purus. M
                 </div>
             </div>
         </section>
-
     </main>
 
-    <!--========================================================
-                               FOOTER
-       =========================================================-->
+    <!--======================================= FOOTER ========================================-->
     <footer class="bg-secondary">
         <div class="container">
             <h2 class="navbar-brand">
-                <a href="./">scripts</a>
-                <span class="brand-slogan">Online Scripts Directory </span>
             </h2>
         </div>
         <hr/>
@@ -491,8 +439,6 @@ Praesent urna ipsum, tincidunt et lacus lacinia, ve nenatis ullamcorper purus. M
 
         <div class="container">
             <p class="copyright">
-                Scripts &#169; <span id="copyright-year"></span>.
-                <a href="index-5.html">Privacy Policy</a>
             </p>
         </div>
 
