--- a/index-4.html
+++ b/index-4.html
@@ -65,54 +65,23 @@
                 <div class="container">
                     <div class="navbar-header">
                         <h1 class="navbar-brand">
-                            <a href="./">scripts</a>
-                            <span class="brand-slogan">Online Scripts Directory </span>
+                            <!-- <img src="assets/images/logo_img.png">  -->
                         </h1>
-
                     </div>
 
                     <div class="navbar-right">
                         <ul class="navbar-nav sf-menu" data-type="navbar">
-                            <li>
-                                <a href="./">Home</a>
-                            </li>
-                            <li>
-                                <a href="index-1.html">About</a>
-                            </li>
-                            <li>
-                                <a href="index-2.html">Most Viewed </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="index-3.html">Highest rated</a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Lorem ipsum dolor </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Ait amet conse </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Ctetur adipisicing elit</a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a href="#">Latest</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Archive</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">Sed do eiusmod </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tempor incididunt </a>
-                                    </li>
-                                </ul>
-                            </li>
-
                             <li class="active">
-                                <a href="index-4.html">Contact Us</a>
+                                <a href="./"><i class="fa fa-home"></i> Inicio</a>
+                            </li>
+                            <li>
+                                <a href="index-1.html"><i class="fa fa-database"></i> Corporativo</a>
+                            </li>
+                            <li>
+                                <a href="index-2.html"><i class="fa fa-rocket"></i> Galería</a>
+                            </li>
+                            <li>
+                                <a href="index-4.html"><i class="fa fa-map-marker"></i> Contactos</a>
                             </li>
                         </ul>
                     </div>
@@ -125,14 +94,7 @@
             </div>
 
             <div class="container text-center banner banner__mod">
-                <form class="search-form" action="search.php" method="GET" accept-charset="utf-8">
-                    <label class="search-form_label">
-                        <input class="search-form_input" type="text" name="s" autocomplete="off"
-                               placeholder="Search Scripts"/>
-                        <span class="search-form_liveout"></span>
-                    </label>
-                    <button class="search-form_submit fa-search" type="submit"></button>
-                </form>
+                
             </div>
         </section>
     </header>
@@ -143,45 +105,39 @@
 
     <main>
         <div class="map">
-            <div id="google-map" class="map_model" data-zoom="11"></div>
-            <ul class="map_locations">
-                <li data-x="-73.9874068" data-y="40.643180">
-                    <p> 9870 St Vincent Place, Glasgow, DC 45 Fr 45. <span>800 2345-6789</span></p>
-                </li>
-            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997.3643277681126!2d-78.12029480062878!3d0.3550139567047327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2a3cb0fa4120d5%3A0xd279c06f1b31d759!2sJose+Mej%C3%ADa+Lequerica%2C+Ibarra!5e0!3m2!1ses!2sec!4v1462134499797" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <section class="well9 bg-alt">
             <div class="container center991">
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
-                        <h3 class="text-center"><strong>Address</strong></h3>
+                        <h3 class="text-center"><strong>Direccion</strong></h3>
 
-                        <p>Aliquam non tempor orci. Aenean orci nibh, finibus maximus mattis eget, sollicitudin a odio.
-                            Donec sed urna nunc. Vesti bulum erat lorem, faucibus ut tincidunt vita</p>
+                        <p>Oficinas Ibarra - Ecuador</p>
 
                         <div class="contact-list">
-                            <address>9870 St Vincent Place, <br/>
-                                Glasgow, DC 45 Fr 45.
+                            <address>Dir: Calle Mejía 8-21, <br/>
+                                Chica Narváez.
                             </address>
                             <dl class="phone">
-                                <dt>Freephone:</dt>
+                                <dt>Cel:</dt>
                                 <dd>
-                                    <a href="callto:#"> +1 800 559 6580</a>
+                                    <a href="callto:#"> 0988 300 526</a>
                                 </dd>
-                                <dt>Telephone:</dt>
+                                <dt>Telefono:</dt>
                                 <dd>
-                                    <a href="callto:#"> +1 800 603 6035</a>
+                                    <a href="callto:#"> 06 2 601 913</a>
                                 </dd>
-                                <dt>FAX:</dt>
+                                <dt>Ventas E-mail:</dt>
                                 <dd>
-                                    <a href="callto:#"> +1 800 889 9898</a>
+                                    <a href="callto:#"> ventas@prevenco.com.ec</a>
                                 </dd>
                             </dl>
                             <dl>
                                 <dt>E-mail:</dt>
                                 <dd>
-                                    <a class="fw3" href="mailto:#">mail@demolink.org</a>
+                                    <a class="fw3" href="mailto:#">info@prevenco.com.ec</a>
                                 </dd>
                             </dl>
                         </div>
